--- a/css/style.css
+++ b/css/style.css
@@ -1,23 +1,63 @@
+@font-face {
+    font-family: "LilitaOne-Regular";
+    src: url('../fonts/LilitaOne-Regular.ttf') format('truetype');
+    font-weight: 100;
+    font-style: normal;
+}
+
 body {
-    margin: 0 250px 0 250px;
+    margin: 0 400px 0 400px;
     background-color: #333;
     color: #fff;
-  }
+    font-family: "LilitaOne-Regular";
+    font-weight: 100;
+    letter-spacing: 0.5px;
+}
 
-  img {
+img {
     margin: 20px 0 20px 0;
+
+}
+
+header {
+    display: flex;
+    height: 70px;
+    background-color: #e61a1ac5;
+    justify-content: space-between;
+    align-items: center;
     padding: 10px;
 }
 
-h1 {
-    font-size: 50px;
-    color: #fffb00b6;
-    background-color: red;
-    font-weight: bold;
-    text-transform: uppercase;
+.logo {
+    display: flex;
+    align-items: center;
+    text-decoration: none;
+    color: white;
 }
 
-h2{
+.nav-link {
+    text-decoration: none;
+    color: #ffffffe5;
+    font-weight: normal;
+    padding-right: 30px;
+    font-size: 20px;
+}
+
+.nav-link:hover {
+    color: #ffffff;
+}
+
+.logo img {
+    height: 50px;
+    margin-right: 10px;
+}
+
+.logo-nombre {
+    font-weight: 100;
+    font-size: 35px;
+}
+
+h2 {
     font-size: 40px;
 }
 
