--- a/css/style.css
+++ b/css/style.css
@@ -1,131 +1,347 @@
-@font-face {
-    font-family: "LilitaOne-Regular";
-    src: url('../fonts/LilitaOne-Regular.ttf') format('truetype');
-    font-weight: 100;
-    font-style: normal;
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
-
-body {
-    margin: 0 400px 0 400px;
-    background-color: #333;
-    color: #fff;
-    font-family: "LilitaOne-Regular";
-    font-weight: 100;
-    letter-spacing: 0.5px;
+body{
+    color: white;
+    font-family: "Lilita-One";
+    background-color: #0054ca;
 }
-
-img {
-    margin: 20px 0 20px 0;
-
-}
-
-header {
-    display: flex;
-    height: 70px;
-    background-color: #e61a1ac5;
-    justify-content: space-between;
-    align-items: center;
-    padding: 10px;
-}
-
-.logo {
-    display: flex;
-    align-items: center;
+a{
     text-decoration: none;
     color: white;
 }
-
-.nav-link {
-    text-decoration: none;
-    color: #ffffffe5;
-    font-weight: normal;
-    padding-right: 30px;
+ul{
+    list-style: none;
+    padding: 0;
+}
+header{
+    width: 100%;
+    z-index: 2;
+}
+.menu-container{
+    background-color: black;
+    height: 70px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0;
+    box-shadow: 0 5px 5px 0px #00000031;
+}
+.menu{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 70%;
+    max-width: 1200px;
+}
+.opciones{
+    display: flex;
+    align-items: center;
+}
+.opciones-izq, .opciones-der{
+    display: flex;
     font-size: 20px;
 }
-
-.nav-link:hover {
+.opciones-izq ul, .opciones-der ul{
     color: #ffffff;
+    display: flex;
+    align-items: center;
+    gap: 120px;
+    text-align: center;
 }
-
-.logo img {
-    height: 50px;
-    margin-right: 10px;
+.opciones-izq a, .opciones-der a{
+    opacity: 1;
+    transition: opacity 0.3s ease;
 }
-
-.logo-nombre {
-    font-weight: 100;
-    font-size: 35px;
+.opciones-izq a:hover, .opciones-der a:hover{
+    opacity: 0.8;
 }
-
-h2 {
-    font-size: 40px;
+.logo-principal img{
+    width: 120px;
+    margin-top: 40px;
+    margin-left: 40px;
+    margin-right: 40px;
+    transition: transform 0.3s ease;
 }
-
-h3 {
-    font-size: 30px;
-}
-
-p {
-    font-size: 25px;
-    text-align:center;
-}
-
-a {
-    color: yellow;
-    font-size: 25pxpx;
-}
-
-table {
-    font-size: 20px;
-    margin: auto;
-}
-
-li {
-    font-size: 25px;
+.logo-principal img:hover{
+    transform: scale(1.05);
 }
 
 footer{
-    text-decoration: none;
-    padding: 2rem 8%;
-    background-color: #0e0e0e;
+    background-color: #000000;
+    width: 100%;
+    height: 400px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 50px;
+    box-shadow: 0 -5px 5px 1px #00000031;
+}
+.footer-container{
+    width: 70%;
+}
+.logo-supercell{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.logo-supercell img{
+    margin-top: 40px;
+    width: 110px;
+    filter: brightness(0) invert(1);
+    transition: filter 0.3s ease-in-out, drop-shadow 0.5s ease-in-out;
+}
+.logo-supercell img:hover{
+    filter: brightness(0) invert(1) drop-shadow(0px 0 30px #ffffffb3);
+}
+.juegos-link ul{
+    font-family: "Roboto-Regular";
+    font-size: 14px;
+    padding: 15px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 25px;
+    margin: 10px;
+}
+.juegos-link a{
+    border-bottom: 2px solid transparent;
+    transition: border-bottom 0.3s ease;
+}
+.juegos-link a:hover{
+    border-bottom: 2px solid white ;
+}
+.redes-sociales{
+    padding: 15px;
+    margin: 25px;
+}
+.redes-sociales ul{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 23px;
+}
+.redes-sociales a img{
+    width: 25px;
+    height: 25px;
+}
+footer .redes-sociales li a img{
+    filter: brightness(0) invert(1);
+    opacity: 1;
+    transition: opacity 0.3s ease;
+}
+footer .redes-sociales li a:hover img{
+    opacity: 0.7;
+}
+.informacion{
+    padding: 10px;
+    font-family: "Roboto-Regular";
+    font-size: 11.5px;
+}
+.informacion ul{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+}
+.informacion a:hover{
+    border-bottom: 2px solid white
+}
+.copyright{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: "Roboto-Regular";
+    font-size: 10px;
+    padding: 5px;
+}
+
+section{
+    width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
 }
 
-.logo-footer {
-    height: 80px;
-    margin-bottom: 1rem;
-
+.contenido{
+    width: 70%;
+    height: 1480px;
+    margin: 40px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.contenido .imagen-principal{
+    width: 100%;
+    margin-bottom: 10px;
+}
+.contenido .imagen-principal img{
+    width: 100%;
+    border: 10px solid black;
+}
+.cont-1{
+    background-color: #7a1cd3;
+    border: 10px solid black;
+    width: 100%;
+    height: 300px;
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 40px;
+    margin-top: 20px;
 }
 
-.footer-menu-container {
+.cont-1 .box-1{
+    width: 45%;
+    height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
-    flex-wrap: wrap;
-    margin-bottom: 1rem;
+    margin-left: 30px;
 }
 
-.menu-item {
-    margin: 1rem 1.5rem;
-    cursor: pointer;
-    opacity: 0.6;
+.cont-1 .box-1 .img-info img{
+    width: 400px
 }
 
-.footer-menu-container{
-    list-style-type: none;
-    color: #f2f2f2;
-    font-size: 18px;
+.img-info img{
+    border-radius: 10px;
+    transition: transform 0.5s ease;
+}
+.img-info img:hover{
+    transform: scale(1.03);
 }
 
-.menu-item:hover {
-    opacity: 1;
+.cont-1 .box-2{
+    width: 45%;
+    height: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-size: 15px;
+    margin-right: 30px;
 }
 
-.copyright {
-    color: #f2f2f2;
-    opacity: 0.3;
-    text-align: center;
+.cont-1 .box-2 p, .cont-1 .box-2 h2{
+    padding: 5px;
+    font-weight: 100;
+}
+
+.cont-2{
+    background-color: #85dd2d;
+    border: 10px solid black;
+    width: 100%;
+    height: 300px;
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 40px;
+}
+
+.cont-2 .box-2{
+    width: 45%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-right: 30px;
+}
+
+.cont-2 .box-2 .img-info img{
+    width: 400px
+}
+.cont-2 .box-1{
+    width: 45%;
+    height: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-size: 15px;
+    margin-left: 30px;
+}
+
+.cont-2 .box-1 p, .cont-2 .box-1 h2{
+    padding: 5px;
+    font-weight: 100;
+    text-align: end;
+}
+
+.cont-3{
+    background-color: #da0f7f;
+    border: 10px solid black;
+    width: 100%;
+    height: 300px;
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 40px;
+}
+
+.cont-3 .box-1{
+    width: 45%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: 30px;
+}
+
+.cont-3 .box-1 .img-info img{
+    width: 400px
+}
+
+.cont-3 .box-2{
+    width: 45%;
+    height: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-size: 15px;
+    margin-right: 30px;
+}
+
+.cont-3 .box-2 p, .cont-3 .box-2 h2{
+    padding: 5px;
+    font-weight: 100;
+}
+
+main{
+    margin-bottom: 400px;
+}
+
+body.personajes{
+    background-color: #268509;
+}
+
+body.modos{
+    background-color: #e5b106;
+}
+
+body.eventos{
+    background-color: #a812c6;
+}
+
+body.personajes .section-personajes .cont-1{
+    background-color: #e73b3b;
+}
+
+body.personajes .section-personajes .cont-2{
+    background-color: #b83030;
+}
+
+body.personajes .section-personajes .cont-3{
+    background-color: #942727;
+}
+
+body.modos .section-modos .cont-3{
+    background-color: #44879a;
+}
+
+body.eventos .section-eventos .cont-2{
+    background-color: #4f4cdc;
+}
+
+body.eventos .section-eventos .cont-3{
+    background-color: #ca0000;
 }
